# qmodbus

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README  about.ui  build_mingw32  deployment.pri  mainwindow.h  mainwindow.ui  modbus.c  qextserialenumerator.cpp  qmodbus.desktop  qmodbus.nsi  qmodbus.pro  qmodbus.qrc  qmodbus.rc  qmodbus.rc.in
cmake/: MinGWCrossCompile.cmake  Win32Toolchain-CC.cmake  Win32Toolchain.cmake
debian/: changelog  control  rules
flatpak/: README.md  de.edchemnitz.QModbus.yaml
forms/: BatchProcessor.ui  about.ui  ipaddressctrl.ui  mainwindow.ui  serialsettingswidget.ui  tcpipsettingswidget.ui
src/: BatchProcessor.cpp  BatchProcessor.h  asciisettingswidget.cpp  asciisettingswidget.h  imodbus.h  ip4validator.cpp  ip4validator.h  ipaddressctrl.cpp  ipaddressctrl.h  iplineedit.cpp  iplineedit.h  main.cpp  mainwindow.cpp  mainwindow.h  networkaddressvalidator.cpp  networkaddressvalidator.h  rtusettingswidget.cpp  rtusettingswidget.h  serialsettingswidget.cpp  serialsettingswidget.h  serialsettingswidget.ui  tcpipsettingswidget.cpp  tcpipsettingswidget.h
